fixed overflow

--- a/style.css
+++ b/style.css
@@ -1069,8 +1069,10 @@ br {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    height: 20px;
-    transform: translate(15px, -18px);
+    height: 30px;
+    overflow: hidden;
+    margin-top: 0;
+    translate: 10px -15px;
 }
 
 #close-leaderboard-button {
